# realtime_training

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
clusters/my-cluster/flux-system/: gotk-sync.yaml
deployment/dev/: .envrc
deployment/dev/backfill-technical-indicators/: backfill-technical-indicators-cm.yaml  backfill-technical-indicators.yaml  candles-historical-d.yaml  kustomization.yaml  technical-indicators-historical-d.yaml  technical-indicators-historical-j.yaml  trades-historical-d.yaml
deployment/dev/candles/: candles.yaml
deployment/dev/kind/: create_cluster.sh  install_grafana.sh  install_kafka.sh  install_kafka_ui.sh  install_risingwave.sh  kind-with-portmapping.yaml
deployment/dev/kind/manifests/: grafana-values.yaml  kafka-e11b.yaml  kafka-ui-all-in-one.yaml  mlflow-minio-secret.yaml  mlflow-values.yaml  risingwave-values.yaml  values_minio_mflow.yaml
deployment/dev/prediction-api/: kustomization.yaml  prediction-api-cm.yaml  prediction-api-d.yaml  prediction-api-s.yaml
deployment/dev/prediction-generator/: kustomization.yaml  prediction-generator-cm.yaml  prediction-generator-d.yaml
deployment/dev/technical-indicators/: technical-indicators.yaml
deployment/dev/trades/: trades.yaml
deployment/dev/training-pipeline/: kustomization.yaml  training-pipeline-cj.yaml  training-pipeline-cm.yaml  training-pipeline-j.yaml
deployment/digital/: .env.local.example  .envrc
deployment/prod/candles/: candles.yaml
deployment/prod/trades/: trades.yaml
docker/: candles.Dockerfile  prediction-api.Dockerfile  prediction-generator.Dockerfile  technical-indicators.Dockerfile  trades.Dockerfile  training-pipeline.Dockerfile
lessons/: lesson_1.md  work.md
scripts/: build-and-push.sh  deploy.sh
services/candles/: pyproject.toml  settings.env
services/candles/src/candles/: __init__.py  config.py  main.py
services/prediction-api/: .envrc  Cargo.toml  Makefile  latest_predictions.sql
services/prediction-api/src/: config.rs  db.rs  main.rs
services/prediction-api/src/routes/: health.rs  mod.rs  predictions.rs
services/predictor/: eda_report.html  pyproject.toml
services/predictor/mlruns/0/: meta.yaml
services/predictor/src/predictor/: __init__.py  config.py  data_validation.py  model_registry.py  models.py  names.py  predict.py  train.py
services/technical_indicators/: pyproject.toml  query.sql  settings.env
services/technical_indicators/src/technical_indicators/: __init__.py  candle.py  config.py  indicators.py  main.py  table.py
services/trades/: pyproject.toml  settings.env
services/trades/src/trades/: config.py  kraken_api.py  kraken_rest_api.py  kraken_websocket_api.py  main.py  main_v1.py  trade.py
state/candles_consumer_group/tumbling_window_60000_reduce/trades/0/: 000023.sst  000024.sst  000025.sst  000026.sst  000034.sst  000035.sst  000036.sst  000037.sst  IDENTITY  LOG  LOG.old.1745661696385619  LOG.old.1745958791180729  LOG.old.1745960196264256  LOG.old.1745960314707025  LOG.old.1745960339497178  LOG.old.1746012199662326  LOG.old.1746012533853458  LOG.old.1746017119364508  LOG.old.1746017547831337  LOG.old.1746017874382147  LOG.old.1746017886053731  LOG.old.1746018565441226  LOG.old.1746023490442470  LOG.old.1746025975437164  LOG.old.1746026236855732  LOG.old.1746026518715494  LOG.old.1746027088603095  MANIFEST-000101  OPTIONS-000099
state/candles_consumer_group/tumbling_window_60000_reduce/trades/1/: IDENTITY  LOG  LOG.old.1746026518789232  MANIFEST-000023  OPTIONS-000021
state/quixstreams-default/tumbling_window_60000_reduce/trades/0/: 000025.sst  000036.sst  000047.sst  000059.sst  000062.sst  000080.sst  000081.sst  000091.sst  000092.sst  000102.sst  000103.sst  000112.sst  000114.sst  000115.sst  000116.sst  IDENTITY  LOG  (+10 more)
(+12 files in other folders)
