[package]
name = "prediction-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
log = "0.4.27"
env_logger = "0.11.8"
