[project]
name = "technical-indicators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gahsilas", email = "gahsilas@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
